fix: spacing issue

--- a/src/app/about-me/styles.module.scss
+++ b/src/app/about-me/styles.module.scss
@@ -39,4 +39,8 @@
     font-size: 2rem;
     margin-bottom: .5rem;
   }
+
+  h4 {
+    margin-bottom: .5rem;
+  }
 }
